Refatora classe de envio de RPS para melhorar a estrutura e legibilid.
Cria classe para retorno de processamento e parse do arquivo/erros.